# windows-test-mcp

./: .gitignore  README.md  claude_desktop_config.example.json  example_usage.py  pyproject.toml  requirements.txt  test_server.py
.claude/: settings.local.json
.claude/skills/windows-mcp-usage/: SKILL.md
src/windows_test_mcp/: __init__.py  server.py
