[project]
name = "windows-test-mcp"
version = "0.1.0"
description = "Windows桌面程序测试MCP服务 - 支持截图、键盘鼠标模拟操作"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=1.0.0",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.0.0",
    "pywin32>=306",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windows_test_mcp"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
